@@ -1,5 +1,10 @@
 # $Id$
 
+2007-10-01	Dmitry E. Demidov
+
+	* main/Criteria/Projections/HavingProjection.class.php,
+	main/Criteria/Projection.class.php: added HavingProjection.
+
 2007-10-01	Dmitry E. Pismenny
 
 	* core/Form/Form.class.php: added isImported check in importMore
